--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
-streamlit>=1.38.0
-streamlit-drawable-canvas>=0.9.3
-pillow>=10.4.0
-numpy>=1.26.4
-protobuf>=4.25.3
-altair>=5.3.0
-pandas>=2.2.2
+streamlit==1.38.0
+pillow==10.4.0
+numpy==1.26.4
+protobuf==4.25.3
+altair==5.3.0
+pandas==2.2.2
