--- a/app/.streamlit/config.toml
+++ b/app/.streamlit/config.toml
@@ -4,3 +4,12 @@ backgroundColor = "#ffffff"
 secondaryBackgroundColor = "#f8f9fc"
 textColor = "#212529"
 font = "sans serif"
+
+[browser]
+gatherUsageStats = false
+
+[server]
+enableXsrfProtection = false
+
+[ui]
+hideTopBar = true
